--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,11 @@
 title: <div align="center">Ryan Noraas</div> # your name (or website title) here
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > 
-  Hi, I'm Ryan Noraas. I work as a materials engineer and data scientist for a major jet engine manufacturing company. My primary work focus is on the development, implementation, and interpretation of deep learning computer vision algorithms for microstructure analysis.  
-  <br><br>
-  <br><br>
+  Hi, I'm Ryan Noraas. I'm a materials engineer and data scientist for a major jet engine manufacturing company. This is my online portfolio.
+  <br></br>
   <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
-  <br><br>
+  <br></br>
   [View My Resume]("/sample_page.md")
-
+  <br></br>
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
