--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,7 @@ logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > 
   Hi, I'm Ryan Noraas. I'm a materials engineer and data scientist for a major jet engine manufacturing company. This is my online portfolio.
   <br></br>
-  <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
-  <br></br>
-  [View My Resume]("/sample_page.md")
+  <a href="https://rbn5009.github.io/">View My Resume</a> 
   <br></br>
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
