--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,8 @@
 title: <div align="center">Ryan Noraas</div> # your name (or website title) here
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > 
-  Hi, I'm Ryan Noraas. I'm a materials engineer and data scientist for a major jet engine manufacturing company. This is my online portfolio.
+  Hi, I'm Ryan Noraas. I'm a materials engineer and data scientist for a major jet engine manufacturing company. Welcome to my online portfolio.
   <br></br>
   <a href="https://rbn5009.github.io/">View My Resume</a> 
-  <br></br>
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
